Reproduce the Slick Vertical text cut off issue

--- a/form-progress-bar/style.css
+++ b/form-progress-bar/style.css
@@ -1,3 +1,8 @@
+.row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 .amana-progress-bar-wrapper {
   display: flex;
 }
